--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,3 +4,27 @@
 h4 {
   padding-top: 1rem;
 }
+.text {
+  margin-bottom: 1rem;
+}
+.wind-stat {
+  width: 100%;
+}
+.bg-8 {
+  background-color: #FD28FC;
+}
+.bg-7 {
+  background-color: #FC26A1;
+}
+.bg-6 {
+  background-color: #FC5B33;
+}
+.bg-5 {
+  background-color: #F1EF34;
+}
+.bg-4 {
+  background-color: #29FD2E;
+}
+.bg-3 {
+  background-color: #6CF6EB;
+}
