--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,6 +13,12 @@ h4 {
 .table-stats td {
   padding: .4rem;
 }
+.table-stats td:first-child {
+  padding-left: 0;
+}
+.table-stats td:last-child {
+  padding-right: 0;
+}
 .bg-8 {
   background-color: #FD28FC;
 }
